# 2025-ROS-Ressources

./: install_ros.sh
qr_code_scanner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
qr_code_scanner/launch/: qr_detector.launch.py  qr_scanner.launch.py  qr_scanner_full.launch.py
qr_code_scanner/qr_code_scanner/: image_capturer.py  image_recorder.py  qr_detector.py
rosmaster/x3_control/x3_control/scripts/: yahboom_joy_X3.py
rosmaster/x3_description/: CMakeLists.txt  package.xml
rosmaster/x3_description/launch/: x3_description.launch.py  x3_gazebo.launch.py
rosmaster/x3_description/urdf/robots/: rosmaster_x3.urdf.xacro
rosmaster/x3_description/x3_description/scripts/: velocity_scaler.py
sim_trc/launch/: sim_trc.launch.py  sim_trc_no_gpu.launch.py
